# learning-rs

./: .example.env  Cargo.toml
migrations/2021-08-23-150917_create_users/: up.sql
src/: main.rs  schema.rs
src/controllers/: mod.rs  users.rs
src/database/: mod.rs
src/misc/: mod.rs
src/models/: mod.rs
