[package]
name = "actix_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
futures = "0.3"
serde_json = "1.0"
actix-web = "3"
